# event_dispatcher

./: CMakeLists.txt  README.md
benchmarks/src/: benchmark_event_dispatcher.cpp  benchmark_event_dispatcher.hpp
cmake/: benchmarks.cmake  examples.cmake  sanitizers.cmake  unit_tests.cmake
examples/: CMakeLists.txt  application.cpp  example.cpp  example2.cpp  func.cpp  future_result.cpp
examples/src/: bus.cpp  event_loop.cpp
include/evds/: dispatcher.hpp  evds.hpp  event.hpp  event_dispatcher.hpp  function_traits.hpp
old/evds/: callable.hpp  event_dispatcher.hpp  function_traits.hpp
old/src/: event_dispatcher.cpp
scripts/conan/: install.py
src/: event_dispatcher.cpp
tests/src/: test_event_dispatcher.cpp  test_event_dispatcher.hpp  test_lambda.cpp
